# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
favorite/: admin.py  models.py  serializers.py  urls.py  views.py
favorite/migrations/: 0001_initial.py
games/: settings.py  urls.py
